--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">VueSoundCloud</string>
-    <string name="title_activity_main">VueSoundCloud</string>
-    <string name="package_name">com.vuesoundcloud.app</string>
-    <string name="custom_url_scheme">com.vuesoundcloud.app</string>
+    <string name="app_name">OmniWave</string>
+    <string name="title_activity_main">OmniWave</string>
+    <string name="package_name">com.omniwave.app</string>
+    <string name="custom_url_scheme">localhost</string>
 </resources>
